Fix broken css and improve responsive display of subcontent

--- a/styles/2_style.css
+++ b/styles/2_style.css
@@ -4,11 +4,11 @@
   ,article
   ,aside
   ,footer
-  ,hgroup 
-  { 
+  ,hgroup
+  {
   display: block;
   }
-  
+
   * {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -18,13 +18,13 @@
     width: 100%;
     font: 16px Georgia, Times, serif;
   }
-  
+
   p {
     line-height: 1.4em;
   }
-  
+
   address {font-style: normal;}
-  
+
   a, a:visited { color: #1D78B4; text-decoration: none; }
   a:hover { color: #1D78B4; text-decoration: underline; }
   .external {
@@ -47,7 +47,7 @@
     -webkit-transition: all .2s ease-out;
     -moz-transition: all .2s ease-out;
   }
-  
+
   .readmore:before{ content: "";}
 
   .readmore:after {
@@ -61,8 +61,8 @@
     display: inline-block;
     line-height: 17px;
   }
-  
-  
+
+
   /* default screen size: 320 + 320 + 300 = 3 columns*/
   body > section {
     width: 940px;
@@ -75,8 +75,8 @@
     opacity: 1;
     -webkit-transform: translate3d(0,0,0);
   }
-  
-  .visual img {  
+
+  .visual img {
     width: 100%;
   }
   /* header */
@@ -85,24 +85,24 @@
     margin: 0 auto 300px auto;
     position: relative;
   }
-  
+
   #header.noShowreelHeader {
     margin: 0 auto 0 auto;
     -webkit-box-shadow: rgba(0, 0, 0, 0.15) 0px -20px 70px 40px;
     -moz-box-shadow: rgba(0, 0, 0, 0.15) 0px -20px 70px 40px;
     box-shadow: rgba(0, 0, 0, 0.15) 0px -20px 70px 40px;
   }
-  
+
   #visual {
     position: absolute;
     right: 0; top: 65px;
-    width: 101%; 
+    width: 101%;
     height: 300px;
-    background: url(/images/office_jelle.jpg) no-repeat center center;      
+    background: url(/images/office_jelle.jpg) no-repeat center center;
     background-size: cover;
     z-index: 2;
   }
-  
+
   body.alt #header {
     position: relative;
     width: 100%; height: 150px;
@@ -113,9 +113,9 @@
   body.alt #visual {
     position: absolute;
     right: 0; top: 0;
-    width: 101%; 
+    width: 101%;
     height: 150px;
-    background: url(/images/chris.jpg) no-repeat center 30%;      
+    background: url(/images/chris.jpg) no-repeat center 30%;
     background-size: cover;
     z-index: -1;
     -webkit-transition: all .3s ease-out;
@@ -134,7 +134,7 @@
   body.alt #header ol li {
     margin-top: 10px;
   }
-  
+
   #header h1 {
     position: absolute;
     width: 70px; height: 108px;
@@ -146,12 +146,12 @@
     -webkit-transition: all .3s ease-out;
     -moz-transition: all .3s ease-out;
   }
-  
+
   /* footer */
-  
-  
+
+
   /* end footer */
-  
+
   /* tweetbar */
   #tweetstream {
     clear: both;
@@ -168,27 +168,27 @@
     border-top:1px solid #CCC;
     border-bottom:1px solid #CCC;
   }
-  
+
   #tweetbar .icon{
     position: absolute;
     top:-30px;
     width:45px;
   }
-  
+
   #tweetbar .left {
     position: absolute;
     top:7px; left:70px;
     width:32px; height:32px;
     background: url(/images/Previous-icon.png);
   }
-  
+
   #tweetbar .tweet {
     margin:0 auto;
     width:700px; height:25px;
     font-size: 90%;
     overflow: hidden;
   }
-  
+
   #tweetbar .right{
     position: absolute;
     top:7px; right:70px;
@@ -196,7 +196,7 @@
     background: url(/images/Next-icon.png);
   }
   /* end tweetbar */
-  
+
   /* copyright */
   .copyright .text {
     width:150px;
@@ -208,17 +208,17 @@
     margin:10px auto 0 auto;
   }
   /* end copyright */
-  
+
   /* block-text */
   .block-text {
     border-top: solid transparent 20px;
     padding-bottom: 20px;
-    border-bottom: solid #ccc 1px;  
+    border-bottom: solid #ccc 1px;
   }
-  
+
   .block-text h1,
   .blog h1 {
-    font: normal 2.5em ChevinLightItalicRegular, Georgia, Times, serif;
+    font: normal 2.84em ChevinLightItalicRegular, Georgia, Times, serif;
     margin: 20px 0;
     color: #888;
     text-align: left;
@@ -226,26 +226,26 @@
   #q42is-header h1 {
     font: 80px bebas-neue, Arial, Helvetica, sans-serif;
   }
-  
+
   .block-text h1 b,
   .blog h1 b {
     color: #232323;
     font-weight: normal;
   }
-  
+
   /*block-full*/
   .block-full
   {
-    position: relative;  
+    position: relative;
     border-bottom: solid #ccc 1px;
     padding: 40px 0;
     clear: both;
     overflow: hidden;
   }
-  
+
   /* block-large */
   .block-large {
-    position: relative;  
+    position: relative;
     border-bottom: solid #ccc 1px;
     padding: 40px 0;
     clear: both;
@@ -261,7 +261,7 @@
     font: normal 40px bebas-neue, Arial, Helvetica, sans-serif;
     letter-spacing: 0.04em;
     margin: 0 0 20px 0;
-    
+
     color: #232323;
   }
   .block-large > figure > .body > h3 {
@@ -270,29 +270,29 @@
     margin-top: -18px;
     color: #888;
   }
-  
-  
+
+
   .block-small h3 {
     font: 12px Arial, Helvetica, sans-serif;
     padding: 0px;
     margin-top: 3px;
     color: #888;
   }
-  
+
   .block-large .visual {
     position: relative;
     width: 620px;
     /*border-bottom: solid transparent 40px;*/
-    margin: 0 20px 0 0;  
+    margin: 0 20px 0 0;
     float: left;
   }
 
       .block-large.right .visual {
-        margin: 0 0 0 20px;  
+        margin: 0 0 0 20px;
         float: right;
       }
-    
-   
+
+
   .block-large .body {
     width: 300px;
     float: right;
@@ -303,19 +303,19 @@
   .block-large .block-small:nth-of-type(1) {
     clear:both;
   }
-  
+
   .block-readmore {
     background-color: white;
     margin-top: -20px;
     padding: 0px 0px 16px;
     text-align: right;
   }
-  
+
   /* block-small */
   .block-small {
     position: relative;
     width: 300px;
-    float: left;    
+    float: left;
     white-space: normal;
     overflow: hidden;
   }
@@ -330,29 +330,29 @@
     font: normal 25px ChevinLightItalicRegular, Georgia, Times, serif;
     margin: 20px 0 0 0;
   }
-  
+
   .block-small .visual {
     position: relative;
     width: 300px;
     overflow: hidden;
   }
-   
+
   .block-small:nth-of-type(1),
-  .block-small:nth-of-type(2) {  
+  .block-small:nth-of-type(2) {
     margin-right: 20px;
   }
-  
+
   .subcontent {
     padding: 15px;
     color: #888;
     line-height: 24px;
   }
-  
-  .subcontent h2 {  
+
+  .subcontent h2 {
     margin: 0px;
   }
-  
-  ul {  
+
+  ul {
     padding: 0px 0px 0px 20px;
     list-style-type: square;
     line-height: 24px;
@@ -364,12 +364,12 @@
   span.effect-glow {
     color: #fff !important;
   }
-  
+
   .todo {
     outline: solid 3px red;
-    
+
   }
-  
+
   .block-large:after {
     content: ".";
     display: block;
@@ -378,48 +378,48 @@
     line-height: 0;
     height: 0;
   }
-  
-  #fb-root {  
+
+  #fb-root {
     display: none;
   }
-  
+
   .fb_iframe_widget {
   }
-  
+
 
   .fb_iframe_widget:hover {
     -webkit-box-shadow: 0 0 8px 0 white;
     -moz-box-shadow: 0 0 8px 0 white;
     box-shadow: 0 0 8px 0 white;
   }
-  
+
   .clear {
     clear: both;
   }
-  
-  
+
+
   .blog .index-page .block-small img {
     width: 300px;
     height: auto;
   }
-  
+
   .blog .bigText img {
     max-width: 100%;
   }
-  
+
   /* Sharing */
-  
+
   .socialShare {
     margin: 10px 0 40px;
     height: 50px;
   }
-  
+
   .socialShare .twitterShare,
   .socialShare .facebookShare {
     float: left;
   }
-  
-  .nowrap 
+
+  .nowrap
   {
     white-space:nowrap;
   }
